--- a/2025/2025-07-15 Finetune Prompts with Arize AI.ipynb
+++ b/2025/2025-07-15 Finetune Prompts with Arize AI.ipynb
@@ -20,8 +20,17 @@
    "source": [
     "#### Background\n",
     "Finetune a prompt which is used to improve English writing and give feedbacks.\n",
+    "- User input is pure text.\n",
+    "- AI model returns formatted text, and then render it in HTML.\n",
     "\n",
-    "![image.png](attachment:image.png)\n"
+    "#### Example\n",
+    "|  |  |\n",
+    "|----------|----------|\n",
+    "| 🧑User input| Hello, Lily. I’m calling because I’m shopping for a t shirt for my kid, and I find a very interesting cartoon on a t shirt, and I want to describe you and seek your opinion about whether we should buy it. On that picture, there is a pirate who has a hat on it with a beard and a mustache on his face. On the other hand, one of his his eyes is also blind, so there is a small cloth covering his blinded eye. One of his legs is replaced by a stick, and at that leg there is a smart kid that looks like his son grabbing his leg and pointing him to a horse, which is a which is a hand on a wall, and that horse has its eyes wide open and looking weirdly back to the pirate. I’m not even sure whether this horse is alive or dead. Anyway, it’s it’s interesting, and I think, our kids will like it. That’s all I’m going to say, and I’ll wait for your call. |\n",
+    "| 🤖 Application output| ![image.png](attachment:image.png)|\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
