--- a/2025/2025-07-15 Finetune Prompts with Arize AI.ipynb
+++ b/2025/2025-07-15 Finetune Prompts with Arize AI.ipynb
@@ -40,8 +40,8 @@
    "source": [
     "\n",
     "####  Tool Requirements\n",
-    "- Compare different models of the same prompt.\n",
-    "- Compare multiple versions prompts.\n",
+    "- Compare **different models** of the same prompt.\n",
+    "- Compare **multiple versions** of the same prompt.\n",
     "\n",
     "\n",
     "#### Tool Comparison\n",
@@ -64,7 +64,7 @@
     "1. [Prompt engineering overview](https://docs.anthropic.com/en/docs/build-with-claude/prompt-engineering/overview)\n",
     "2. [Evaluate prompts in the developer console](https://docs.anthropic.com/en/docs/build-with-claude/prompt-engineering/evaluate-prompts-in-the-developer-console)\n",
     "\n",
-    "#### Key Points\n",
+    "#### Key Points 🌟\n",
     "1. Use XML format to define the prompt.\n",
     "2. Put and example at the begining of the prompt.\n",
     "3. Use Claude's prefill and end sequence features to restrict the output."
